--- a/techcon_website/schedule.html
+++ b/techcon_website/schedule.html
@@ -73,7 +73,7 @@
         </p>
 
         <footer>
-            <p>Copyright © 2024 TechCon. All rights reserved.</p>
+            <p>copyright © 2024 TechCon. All rights reserved.</p>
         </footer>
     </main>
 </body>
