--- a/techcon_website/register.html
+++ b/techcon_website/register.html
@@ -10,6 +10,15 @@
         <h1>Register for TechCon 2024</h1>
     </header>
 
+    <nav>
+        <ul>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
+            <li><a href="schedule.html">SChedule</a></li>
+            <li><a href="contact.html">Contact</a></li>
+        </ul>
+    </nav>
+
     <main>
         <form action="#">
             <label for="fullname">Full Name:</label>
