--- a/techcon_website/index.html
+++ b/techcon_website/index.html
@@ -13,7 +13,7 @@
     <nav>
         <ul>
             <li><a href="about.html">About</a></li>
-            <li><a href="schedule.html">SChedule</a></li>
+            <li><a href="schedule.html">Schedule</a></li>
             <li><a href="register.html">Register</a></li>
             <li><a href="contact.html">Contact</a></li>
         </ul>
