--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -32,6 +32,7 @@
                 <img src="insagram.jpeg" alt="instagram icon">
             </a></li>
         </ul>
+        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d385399.35209236876!2d28.682528314619336!3d41.00485193844723!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x14caa7040068086b%3A0xe1ccfe98bc01b0d0!2zSXN0YW5idWwsIMSwc3RhbmJ1bCwgVMO8cmtpeWU!5e0!3m2!1sen!2sng!4v1753019357339!5m2!1sen!2sng" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
         <p>For inquiries, please contact us at the email above or fill out the form below.</p>
         <form action="#" method="post">
             <label for="name">Name:</label>
