--- a/techcon_website/contact.html
+++ b/techcon_website/contact.html
@@ -12,10 +12,10 @@
 
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
-            <li><a href="about.html">About</a></li>
-            <li><a href="schedule.html">SChedule</a></li>
-            <li><a href="register.html">Register</a></li>
+            <li><a href="index.html" target="_blank">Home</a></li>
+            <li><a href="about.html" target="_blank">About</a></li>
+            <li><a href="schedule.html" target="_blank">SChedule</a></li>
+            <li><a href="register.html" target="_blank">Register</a></li>
         </ul>
     </nav>
 
